--- a/pkg/sdk/package.json
+++ b/pkg/sdk/package.json
@@ -2,6 +2,7 @@
   "name": "@ekisa-xsighub/sdk",
   "version": "0.0.0",
   "description": "SDK de emparejamiento que permite la integración de la aplicación móvil con el servidor centralizado para capturar y transferir las firmas de los usuarios en tiempo real.",
+  "author": "Ekisa-Team",
   "license": "MIT",
   "files": [
     "dist"
