chore: update scripts & config

--- a/package.json
+++ b/package.json
@@ -10,13 +10,9 @@
     "server:dev": "pnpm --filter server dev",
     "server:build": "pnpm --filter server build",
     "server:serve": "pnpm --filter server serve",
-    "server:test:unit": "pnpm --filter server test:unit",
-    "server:test:unit:ui": "pnpm --filter server test:unit:ui",
-    "server:test:unit:coverage": "pnpm --filter server test:unit:coverage",
-    "mobile:dev": "pnpm --filter mobile dev",
-    "mobile:build": "pnpm --filter mobile build",
-    "mobile:test": "pnpm --filter mobile test",
-    "mobile:test:unit": "pnpm --filter mobile test:unit",
+    "server:test": "pnpm --filter server test",
+    "server:test:ui": "pnpm --filter server test:ui",
+    "server:test:coverage": "pnpm --filter server test:coverage",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
     "stylelint": "stylelint **/*.{svelte,vue,tsx,css,pcss,less,scss,sass} --quiet-deprecation-warnings",
