--- a/package.json
+++ b/package.json
@@ -13,6 +13,17 @@
     "server:test": "pnpm --filter server test",
     "server:test:ui": "pnpm --filter server test:ui",
     "server:test:coverage": "pnpm --filter server test:coverage",
+    "mobile:dev": "pnpm --filter mobile dev",
+    "mobile:preview": "pnpm --filter mobile preview",
+    "mobile:device": "pnpm --filter mobile device",
+    "mobile:build:android": "pnpm --filter mobile build:android",
+    "mobile:build:ios": "pnpm --filter mobile build:ios",
+    "mobile:test:android": "pnpm --filter mobile test:android",
+    "mobile:test:ios": "pnpm --filter mobile test:ios",
+    "mobile:debug:android": "pnpm --filter mobile debug:android",
+    "mobile:debug:ios": "pnpm --filter mobile debug:ios",
+    "mobile:doctor:android": "pnpm --filter mobile doctor:android",
+    "mobile:doctor:ios": "pnpm --filter mobile doctor:ios",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
     "stylelint": "stylelint **/*.{svelte,vue,tsx,css,pcss,less,scss,sass} --quiet-deprecation-warnings",
