--- a/pkg/mobile/package.json
+++ b/pkg/mobile/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "dev": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -27,6 +27,7 @@
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.5.0",
+    "signature_pad": "^4.1.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
