--- a/pkg/server/package.json
+++ b/pkg/server/package.json
@@ -9,9 +9,9 @@
     "dev": "vite",
     "build": "vite build --outDir dist --ssr src/server.ts",
     "serve": "pnpm build && node dist/server.mjs",
-    "test:unit": "vitest run",
-    "test:unit:ui": "vitest --ui",
-    "test:unit:coverage": "vitest --coverage"
+    "test": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "@fastify/autoload": "^5.7.1",
@@ -22,9 +22,11 @@
     "fastify": "^4.17.0",
     "fastify-plugin": "^4.5.0",
     "pino": "^8.11.0",
-    "pino-pretty": "^10.0.0"
+    "pino-pretty": "^10.0.0",
+    "request-ip": "^3.3.0"
   },
   "devDependencies": {
+    "@types/request-ip": "^0.0.37",
     "@vitest/coverage-c8": "^0.30.1",
     "@vitest/ui": "^0.30.1",
     "c8": "^7.13.0",
