feat(sdk): implement functionality + example

--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "server:test": "pnpm --filter server test",
     "server:test:ui": "pnpm --filter server test:ui",
     "server:test:coverage": "pnpm --filter server test:coverage",
+    "sdk:dev": "pnpm --filter sdk dev",
+    "sdk:build": "pnpm --filter sdk build",
+    "sdk:release": "pnpm --filter sdk release",
     "mobile:dev": "pnpm --filter mobile dev",
     "mobile:build": "pnpm --filter mobile build",
     "mobile:watch": "pnpm --filter mobile watch",
     "mobile:test": "pnpm --filter mobile test",
     "mobile:lint": "pnpm --filter mobile lint",
+    "examples:angular": "pnpm --filter angular dev",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
     "stylelint": "stylelint **/*.{svelte,vue,tsx,css,pcss,less,scss,sass} --quiet-deprecation-warnings",
