--- a/pkg/sdk/package.json
+++ b/pkg/sdk/package.json
@@ -36,7 +36,11 @@
     "release": "pnpm publish --access public"
   },
   "devDependencies": {
+    "@types/qrcode": "^1.5.0",
     "rimraf": "^5.0.0",
     "unbuild": "^1.2.1"
+  },
+  "dependencies": {
+    "qrcode": "^1.5.3"
   }
 }
