refactor: clean up and improve examples

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "postinstall": "npx simple-git-hooks",
     "server:dev": "pnpm --filter server dev",
+    "server:dev:host": "pnpm --filter server dev:host",
     "server:build": "pnpm --filter server build",
     "server:serve": "pnpm --filter server serve",
     "server:test": "pnpm --filter server test",
@@ -16,11 +17,6 @@
     "sdk:dev": "pnpm --filter sdk dev",
     "sdk:build": "pnpm --filter sdk build",
     "sdk:release": "pnpm --filter sdk release",
-    "mobile:dev": "pnpm --filter mobile dev",
-    "mobile:build": "pnpm --filter mobile build",
-    "mobile:watch": "pnpm --filter mobile watch",
-    "mobile:test": "pnpm --filter mobile test",
-    "mobile:lint": "pnpm --filter mobile lint",
     "examples:angular": "pnpm --filter angular dev",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
