--- a/pkg/server/package.json
+++ b/pkg/server/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "scripts": {
     "dev": "vite",
+    "dev:host": "vite --host",
     "build": "vite build --outDir dist --ssr src/server.ts",
     "serve": "pnpm build && node dist/server.mjs",
     "test": "vitest run",
