--- a/.github/workflows/deploy_server.yml
+++ b/.github/workflows/deploy_server.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install and build
-      - uses: pnpm/action-setup@v2
+      - name: pnpm install and build
+        uses: pnpm/action-setup@v2
         with:
           version: 6.0.2
           run_install: |
