--- a/.github/workflows/deploy_server.yml
+++ b/.github/workflows/deploy_server.yml
@@ -18,13 +18,15 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: pnpm install and build
+      - name: Install dependencies
         uses: pnpm/action-setup@v2
         with:
           version: 6.0.2
           run_install: |
             - recursive: true
               args: [--frozen-lockfile, --strict-peer-dependencies]
+
+      - name: Build server
         run: |
           pnpm server:build
 
