--- a/.github/workflows/deploy_server.yml
+++ b/.github/workflows/deploy_server.yml
@@ -18,16 +18,15 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: Install dependencies
+      - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 6.0.2
-          run_install: |
-            - recursive: true
-              args: [--frozen-lockfile, --strict-peer-dependencies]
+          version: 8
+          run_install: false
 
       - name: Build server
         run: |
+          pnpm install
           pnpm server:build
 
       - name: Upload artifact for deployment job
