feat(server): add websockets to the signaling server

--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "server:prisma:production:push": "pnpm --filter xsighub-server prisma:production:push",
     "server:prisma:production:seed": "pnpm --filter xsighub-server prisma:production:seed",
     "server:prisma:production:studio": "pnpm --filter xsighub-server prisma:production:studio",
-    "sdk:dev": "pnpm --filter xsighub-sdk dev",
-    "sdk:build": "pnpm --filter xsighub-sdk build",
-    "sdk:release": "pnpm --filter xsighub-sdk release",
+    "core:dev": "pnpm --filter core dev",
+    "core:build": "pnpm --filter core build",
+    "core:release": "pnpm --filter core release",
+    "sdk:dev": "pnpm --filter sdk dev",
+    "sdk:build": "pnpm --filter sdk build",
+    "sdk:release": "pnpm --filter sdk release",
     "examples:angular": "pnpm --filter angular dev",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
