--- a/pkg/xsighub-sdk/package.json
+++ b/pkg/xsighub-sdk/package.json
@@ -36,6 +36,7 @@
     "release": "pnpm publish --access public"
   },
   "dependencies": {
+    "@ekisa-xsighub/core": "workspace:^",
     "qrcode": "^1.5.3"
   },
   "devDependencies": {
