--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.0.2",
     "@ekisa-xsighub/core": "workspace:^",
     "@ekisa-xsighub/sdk": "workspace:^",
+    "@ngneat/falso": "^6.4.0",
     "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
