--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,13 +38,13 @@ jobs:
           pnpm server:build
 
       - name: Zip dist files for upload between jobs
-        run: cd ./apps/server/dist && zip --symlinks -r xsighub.zip ./*
+        run: cd ./apps/server/dist && zip --symlinks -r xsighub.zip *
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
-          name: xsighub-app
-          path: ./apps/server/xsighub.zip
+          name: xsighub-server
+          path: ./apps/server/dist/xsighub.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -57,7 +57,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
-          name: xsighub-app
+          name: xsighub-server
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
@@ -69,4 +69,4 @@ jobs:
           package: xsighub.zip
 
       - name: Delete zip file
-        run: rm nest.zip
+        run: rm xsighub.zip
