build: move production sqlite file to dist folder

--- a/apps/server/envs/production.env
+++ b/apps/server/envs/production.env
@@ -14,7 +14,7 @@ APP_LOGGING_ENABLE_PRETTY_LOGS=false
 APP_LOGGING_DISPLAY_REQUEST_LOGS=true
 APP_LOGGING_DISPLAY_RESPONSE_LOGS=true
 
-SERVER_TIMEOUT_ENABLED=false
+SERVER_TIMEOUT_ENABLED=true
 SERVER_TIMEOUT_VALUE=6000
 
 # ;----------;
@@ -34,4 +34,4 @@ SECURITY_THROTTLE_LIMIT=3
 # ;----------;
 # ; DATABASE ;
 # ;----------;
-DATABASE_URL="file:production.db"
+DATABASE_URL="file:development.db"
