--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server:build": "pnpm --filter xsighub-server build",
     "server:serve": "pnpm --filter xsighub-server serve",
     "server:test": "pnpm --filter xsighub-server test",
+    "server:preview": "pnpm --filter xsighub-server preview",
     "server:prisma:generate": "pnpm --filter xsighub-server prisma:generate",
     "server:prisma:development:migrate": "pnpm --filter xsighub-server prisma:development:migrate",
     "server:prisma:development:pull": "pnpm --filter xsighub-server prisma:development:pull",
