--- a/apps/server/envs/development.env
+++ b/apps/server/envs/development.env
@@ -38,4 +38,4 @@ SECURITY_THROTTLE_LIMIT=3
 # ;----------;
 # ; DATABASE ;
 # ;----------;
-DATABASE_URL="file:development.db"
+DATABASE_URL="file:xsighub.db"
