--- a/apps/server/envs/production.env
+++ b/apps/server/envs/production.env
@@ -34,4 +34,4 @@ SECURITY_THROTTLE_LIMIT=3
 # ;----------;
 # ; DATABASE ;
 # ;----------;
-DATABASE_URL="file:development.db"
+DATABASE_URL="file:xsighub.db"
