ci: update ci/cd to reusable workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,7 @@
-name: Build and deploy server to Azure Web App
+name: Deploy server image to Azure Web App
 
-on:
-  push:
-    branches:
-      - trunk
-  workflow_dispatch:
+on: workflow_call
+
 
 jobs:
   purge-artifacts:
