--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xsighub",
-  "version": "0.0.0",
+  "version": "0.1.0-beta",
   "description": "Sistema Hub para capturar, transferir y mostrar las firmas de los usuarios en aplicaciones móviles y web en tiempo real.",
   "author": "Ekisa-Team",
   "license": "ISC",
