--- a/.github/workflows/release-server.yaml
+++ b/.github/workflows/release-server.yaml
@@ -5,6 +5,7 @@ on: workflow_call
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}/server
+  AZURE_WEBAPP_NAME: xsighub
 
 jobs:
   build:
@@ -67,3 +68,24 @@ jobs:
         env:
           COSIGN_EXPERIMENTAL: 'true'
         run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Lowercase the repo name
+        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          images: '${{env.IMAGE_NAME}}:${{ github.sha }}'
