--- a/pkg/xsighub-sdk/package.json
+++ b/pkg/xsighub-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ekisa-xsighub/sdk",
-  "version": "0.0.0",
+  "version": "0.1.8-beta",
   "description": "SDK de emparejamiento que permite la integración de la aplicación móvil con el servidor centralizado para capturar y transferir las firmas de los usuarios en tiempo real.",
   "author": "Ekisa-Team",
   "license": "MIT",
@@ -33,7 +33,7 @@
   "scripts": {
     "dev": "unbuild --stub",
     "build": "rimraf dist && unbuild",
-    "release": "pnpm publish --access public"
+    "release": "pnpm build && pnpm publish --access public"
   },
   "dependencies": {
     "@ekisa-xsighub/core": "workspace:^",
