--- a/package.json
+++ b/package.json
@@ -7,35 +7,11 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "npx simple-git-hooks",
-    "server:dev": "pnpm --filter xsighub-server dev",
-    "server:build": "pnpm --filter xsighub-server build",
-    "server:serve": "pnpm --filter xsighub-server serve",
-    "server:test": "pnpm --filter xsighub-server test",
-    "server:preview": "pnpm --filter xsighub-server preview",
-    "server:preview:production": "pnpm --filter xsighub-server preview:production",
-    "server:prisma:generate": "pnpm --filter xsighub-server prisma:generate",
-    "server:prisma:development:migrate": "pnpm --filter xsighub-server prisma:development:migrate",
-    "server:prisma:development:pull": "pnpm --filter xsighub-server prisma:development:pull",
-    "server:prisma:development:push": "pnpm --filter xsighub-server prisma:development:push",
-    "server:prisma:development:seed": "pnpm --filter xsighub-server prisma:development:seed",
-    "server:prisma:development:studio": "pnpm --filter xsighub-server prisma:development:studio",
-    "server:prisma:production:migrate": "pnpm --filter xsighub-server prisma:production:migrate",
-    "server:prisma:production:pull": "pnpm --filter xsighub-server prisma:production:pull",
-    "server:prisma:production:push": "pnpm --filter xsighub-server prisma:production:push",
-    "server:prisma:production:seed": "pnpm --filter xsighub-server prisma:production:seed",
-    "server:prisma:production:studio": "pnpm --filter xsighub-server prisma:production:studio",
-    "core:dev": "pnpm --filter core dev",
-    "core:build": "pnpm --filter core build",
-    "core:release": "pnpm --filter core release",
-    "sdk:dev": "pnpm --filter sdk dev",
-    "sdk:build": "pnpm --filter sdk build",
-    "sdk:release": "pnpm --filter sdk release",
-    "examples:angular": "pnpm --filter angular dev",
-    "eslint": "eslint .",
-    "eslint:fix": "eslint . --fix",
-    "stylelint": "stylelint **/*.{svelte,vue,tsx,css,pcss,less,scss,sass} --quiet-deprecation-warnings",
-    "stylelint:fix": "stylelint **/*.{svelte,vue,tsx,css,pcss,less,scss,sass} --quiet-deprecation-warnings --fix",
-    "prettier": "prettier --write ."
+    "build": "pnpm -r --parallel run build",
+    "dev": " pnpm -r --parallel run dev",
+    "test": "pnpm -r --parallel run test",
+    "lint": "pnpm -r --parallel run lint",
+    "format": "pnpm -r --parallel run format"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged",
@@ -57,6 +33,7 @@
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "@ekisa-xsighub/eslint-config": "workspace:^",
     "commitlint": "^17.6.1",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
