--- a/packages/xsighub-core/package.json
+++ b/packages/xsighub-core/package.json
@@ -19,24 +19,27 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Ekisa-Team/xsighub/tree/main/pkg/core"
+    "url": "https://github.com/Ekisa-Team/xsighub/tree/trunk/packages/core"
   },
   "bugs": {
     "url": "https://github.com/Ekisa-Team/xsighub/issues"
   },
-  "homepage": "https://github.com/Ekisa-Team/xsighub/tree/main/pkg/core",
+  "homepage": "https://github.com/Ekisa-Team/xsighub/tree/trunk/packages/core",
   "keywords": [
     "Ekisa",
     "Ekisa core",
     "Ekisa signature"
   ],
   "scripts": {
-    "dev": "unbuild --stub",
     "build": "rimraf dist && unbuild",
-    "release": "pnpm build && pnpm publish --access public"
+    "release": "pnpm build && pnpm publish --access public",
+    "lint": "eslint .",
+    "format": "prettier --write --ignore-path=../../.prettierignore ."
   },
   "devDependencies": {
     "@types/qrcode": "^1.5.0",
+    "@ekisa-xsighub/eslint-config": "workspace:^",
+    "@ekisa-xsighub/tsconfig": "workspace:^",
     "rimraf": "^5.0.0",
     "unbuild": "^1.2.1"
   }
