--- a/apps/server/.eslintignore
+++ b/apps/server/.eslintignore
@@ -1,9 +1,12 @@
-# Ignore everything that starts with a dot
-.*
-
+.DS_Store
 node_modules
-**/build
-**/dist
+/dist
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
 
 # Ignore files for PNPM, NPM and YARN
 pnpm-lock.yaml
