--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,12 +8,12 @@
   "scripts": {
     "postinstall": "npx prisma generate",
     "build": "pnpm prisma:production:push && nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "dev": "nest start --watch",
     "dev:debug": "nest start --debug --watch",
     "preview": "dotenv -e envs/production.env -- node dist/main",
     "preview:production": "dotenv -e envs/production.env -- node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint .",
+    "format": "prettier --write --ignore-path=../../.prettierignore .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
