--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -21,6 +21,7 @@
     "@ekisa-xsighub/core": "workspace:^",
     "@ekisa-xsighub/sdk": "workspace:^",
     "@ngneat/falso": "^6.4.0",
+    "marked": "^5.1.0",
     "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -30,7 +31,9 @@
     "@angular-devkit/build-angular": "^16.0.2",
     "@angular/cli": "~16.0.2",
     "@angular/compiler-cli": "^16.0.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/jasmine": "~4.3.0",
+    "@types/marked": "^5.0.0",
     "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
