feat(server): implement automatic cleanup & fix multiple issues

--- a/apps/server/envs/production.env
+++ b/apps/server/envs/production.env
@@ -17,6 +17,8 @@ APP_LOGGING_DISPLAY_RESPONSE_LOGS=true
 SERVER_TIMEOUT_ENABLED=true
 SERVER_TIMEOUT_VALUE=6000
 
+XSIGHUB_CLEANUP_SESSION_INTERVAL="7d"
+
 # ;----------;
 # ; SECURITY ;
 # ;----------;
