--- a/apps/server/envs/development.env
+++ b/apps/server/envs/development.env
@@ -21,6 +21,8 @@ APP_LOGGING_ENABLE_PRETTY_LOGS=true
 SERVER_TIMEOUT_ENABLED=false
 SERVER_TIMEOUT_VALUE=6000
 
+XSIGHUB_CLEANUP_SESSION_INTERVAL="30s"
+
 # ;----------;
 # ; SECURITY ;
 # ;----------;
