--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -46,6 +46,7 @@
     "dotenv-cli": "^7.2.1",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
+    "ms": "^2.1.3",
     "nestjs-pino": "^3.2.0",
     "pino-http": "^8.3.3",
     "reflect-metadata": "^0.1.13",
@@ -61,6 +62,7 @@
     "@nestjs/testing": "9.2.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
+    "@types/ms": "^0.7.31",
     "@types/node": "18.16.12",
     "@types/request-ip": "^0.0.37",
     "@types/supertest": "^2.0.11",
