refactor: update types

--- a/apps/server/envs/development.env
+++ b/apps/server/envs/development.env
@@ -21,7 +21,7 @@ APP_LOGGING_ENABLE_PRETTY_LOGS=true
 SERVER_TIMEOUT_ENABLED=false
 SERVER_TIMEOUT_VALUE=6000
 
-XSIGHUB_CLEANUP_SESSION_INTERVAL="30s"
+XSIGHUB_CLEANUP_SESSION_INTERVAL="1d"
 
 # ;----------;
 # ; SECURITY ;
