--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ekisa-xsighub/eslint-config",
-  "version": "0.2.3-beta",
+  "version": "0.3.0",
   "main": "src/index.js",
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.27.0",
