--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ekisa-xsighub/tsconfig",
-  "version": "0.2.3-beta",
+  "version": "0.3.0",
   "private": true,
   "publishConfig": {
     "access": "restricted"
