--- a/packages/xsighub-core/package.json
+++ b/packages/xsighub-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ekisa-xsighub/core",
-  "version": "0.2.3-beta",
+  "version": "0.3.0",
   "description": "El motor central de Xsighub sin ajustes preestablecidos.",
   "author": "Ekisa-Team",
   "license": "MIT",
