feat: broadcast changes to single clients

--- a/apps/server/envs/development.env
+++ b/apps/server/envs/development.env
@@ -30,8 +30,8 @@ SECURITY_HELMET_ENABLED=true
 
 SECURITY_CORS_ENABLED=true
 SECURITY_CORS_ALLOWED_ORIGIN=*
-# SECURITY_CORS_ALLOWED_METHODS=
-# SECURITY_CORS_ALLOWED_HEADERS=
+SECURITY_CORS_ALLOWED_METHODS=*
+SECURITY_CORS_ALLOWED_HEADERS=*
 
 SECURITY_THROTTLE_ENABLED=true
 SECURITY_THROTTLE_TTL=1
