--- a/apps/server/envs/production.env
+++ b/apps/server/envs/production.env
@@ -27,7 +27,7 @@ SECURITY_HELMET_ENABLED=true
 SECURITY_CORS_ENABLED=true
 SECURITY_CORS_ALLOWED_ORIGIN=*
 SECURITY_CORS_ALLOWED_METHODS=GET,HEAD,PUT,PATCH,POST,DELETE
-SECURITY_CORS_ALLOWED_HEADERS="Origin, Content-Type, Accept, Authorization, X-Requested-With, x-correlation-id, x-xsighub-client-id"
+SECURITY_CORS_ALLOWED_HEADERS="Origin, Content-Type, Accept, Authorization, X-Requested-With, x-correlation-id"
 
 SECURITY_THROTTLE_ENABLED=true
 SECURITY_THROTTLE_TTL=1
