--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "npx simple-git-hooks",
-    "build": "pnpm -r --parallel --filter='!angular' run build",
-    "dev": " pnpm -r --parallel run dev",
-    "test": "pnpm -r --parallel run test",
-    "lint": "pnpm -r --parallel run lint",
-    "format": "pnpm -r --parallel run format"
+    "build": "turbo run build",
+    "stub": "turbo run stub",
+    "dev": "turbo run dev",
+    "test": "turbo run test",
+    "lint": "turbo run lint",
+    "format": "turbo run format",
+    "gen:package": "turbo gen package"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged",
@@ -27,25 +29,27 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^17.6.1",
-    "@culur/stylelint-config": "^1.2.0",
-    "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@culur/stylelint-config": "^1.3.0",
     "@ekisa-xsighub/eslint-config": "workspace:^",
-    "commitlint": "^17.6.1",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@turbo/gen": "^1.10.16",
+    "@types/node": "^20.10.2",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "commitlint": "^18.4.3",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte3": "^4.0.0",
-    "lint-staged": "^13.2.1",
-    "prettier": "^2.8.7",
-    "prettier-plugin-svelte": "^2.10.0",
-    "prettier-plugin-tailwindcss": "^0.2.7",
-    "simple-git-hooks": "^2.8.1",
-    "stylelint": "^15.4.0",
-    "typescript": "^5.0.4",
-    "vite": "^4.2.1",
-    "vitest": "^0.29.8"
+    "lint-staged": "^13.3.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-svelte": "^2.10.1",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "simple-git-hooks": "^2.9.0",
+    "stylelint": "^15.11.0",
+    "turbo": "^1.10.16",
+    "typescript": "^5.3.2",
+    "vite": "^4.5.0",
+    "vitest": "^0.34.6"
   }
 }
