--- a/packages/xsighub-core/package.json
+++ b/packages/xsighub-core/package.json
@@ -31,16 +31,15 @@
     "Ekisa signature"
   ],
   "scripts": {
-    "build": "rimraf dist && unbuild",
+    "build": "unbuild",
+    "stub": "unbuild",
     "release": "pnpm build && pnpm publish --access public",
     "lint": "eslint .",
     "format": "prettier --write --ignore-path=../../.prettierignore ."
   },
   "devDependencies": {
-    "@types/qrcode": "^1.5.0",
     "@ekisa-xsighub/eslint-config": "workspace:^",
     "@ekisa-xsighub/tsconfig": "workspace:^",
-    "rimraf": "^5.0.0",
-    "unbuild": "^1.2.1"
+    "unbuild": "^2.0.0"
   }
 }
