--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,6 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:generate": "prisma generate",
+    "prisma:studio": "prisma studio",
     "prisma:development:migrate": "dotenv -e envs/development.env -- prisma migrate dev --name",
     "prisma:development:pull": "dotenv -e envs/development.env -- prisma db pull",
     "prisma:development:push": "dotenv -e envs/development.env -- prisma db push",
@@ -63,7 +64,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "29.5.10",
     "@types/ms": "^0.7.34",
-    "@types/node": "20.10.2",
+    "@types/node": "20.10.3",
     "@types/request-ip": "^0.0.41",
     "@types/supertest": "^2.0.16",
     "@types/ua-parser-js": "^0.7.39",
